<resources>
    <string name="app_name">EM. Онлайн Магазин</string>
    <string name="name">Имя</string>
    <string name="second_name">Фамилия</string>
    <string name="phone_number">Номер телефона</string>
    <string name="login">Вход</string>
    <string name="sign_in">Войти</string>
    <string name="phone_hint">+7 ### ### ## ##</string>
    <string name="sign_in_text1">Нажимая кнопку “Войти”, Вы принимаете</string>
    <string name="sign_in_text2"><u>условия программы лояльности</u></string>
    <string name="home_item_title">Главная</string>
    <string name="catalog_item_title">Каталог</string>
    <string name="bag_item_title">Корзина</string>
    <string name="discounts_item_title">Акции</string>
    <string name="profile_item_title">Профиль</string>
    <string name="sign_out">Выйти</string>
    <string name="favourites">Избранное</string>
    <string name="shops">Магазины</string>
    <string name="feedback">Обратная связь</string>
    <string name="offer">Оферта</string>
    <string name="refund">Возврат товара</string>
    <string name="product">Товар</string>
    <string name="profile_app_label">Личный кабинет</string>
    <string name="product_rus_1">%1$d Товар</string>
    <string name="product_rus_2_4">%1$d Товара</string>
    <string name="product_rus_5_0">%1$d Товаров</string>
    <string name="back">Вернуться</string>
    <string name="product_cover">Обложка продукта</string>
    <string name="add_to_favourite">Добавить в избранное</string>
    <string name="rating">Рейтинг</string>
    <string name="add_to_bag">Добавить в корзину</string>
    <string name="sort">Сортировка</string>
    <string name="initial_sort">По популярности</string>
    <string name="filters">Фильтры</string>
    <string name="cancel_tag">Отменить фильтр по тегу</string>
    <string name="products">Товары</string>
    <string name="brands">Бренды</string>
    <string name="share">Поделиться</string>
    <string name="description">Описание</string>
    <string name="show">Подробнее</string>
    <string name="hide">Скрыть</string>
    <string name="info">Характеристики</string>
    <string name="ingredients">Состав</string>
    <string name="copy">Копировать</string>
    <string name="reference">Справка</string>
    <string name="available_rus_1">Доступно для заказа %1$d штука</string>
    <string name="available_rus_2_4">Доступно для заказа %1$d штуки</string>
    <string name="available_rus_5_0">Доступно для заказа %1$d штук</string>
    <string name="feedback_rus_1">%1$d отзыв</string>
    <string name="feedback_rus_2_4">%1$d отзыва</string>
    <string name="feedback_rus_5_0">%1$d отзывов</string>
    <array name="sort_by">
        <item>По популярности</item>
        <item>По уменьшению цены</item>
        <item>По возрастанию цены</item>
    </array>
</resources>