<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
                name="view_model"
                type="com.paranid5.emonlineshop.presentation.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/login_activity_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:fontFamily="@font/sf_pro_display_regular"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="15dp" />

        <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/grey"
                    android:hint="@string/name"
                    app:boxBackgroundColor="@color/light_gray"
                    app:boxStrokeWidth="0dp"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusTopStart="8dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="11dp"
                        android:paddingBottom="11dp"
                        android:paddingStart="16dp"
                        android:paddingEnd="8dp"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:fontFamily="@font/sf_pro_display_regular"
                        android:drawableEnd="@drawable/cross" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textColorHint="@color/grey"
                    android:hint="@string/second_name"
                    app:boxBackgroundColor="@color/light_gray"
                    app:boxStrokeWidth="0dp"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusTopStart="8dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/family_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="11dp"
                        android:paddingBottom="11dp"
                        android:paddingStart="16dp"
                        android:paddingEnd="8dp"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:fontFamily="@font/sf_pro_display_regular"
                        android:drawableEnd="@drawable/cross" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:hintEnabled="false"
                    app:boxBackgroundColor="@color/light_gray"
                    app:boxStrokeWidth="0dp"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusTopStart="8dp">
                <com.vicmikhailau.maskededittext.MaskedEditText
                        android:id="@+id/phone_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="11dp"
                        android:paddingBottom="11dp"
                        android:paddingStart="16dp"
                        android:paddingEnd="8dp"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:fontFamily="@font/sf_pro_display_regular"
                        android:drawableEnd="@drawable/cross"
                        android:gravity="center_vertical"
                        android:textColorHint="@color/grey"
                        android:hint="@string/phone_number"
                        android:inputType="number"
                        app:mask="+7 ### ### ## ##" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/sign_in"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:enabled="@{view_model.hasInputError}"
                    app:backgroundTint="@color/pink"
                    app:cornerRadius="8dp"
                    style="@style/EFMaterialButtonStyle"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>