<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="22dp"
            android:contentDescription="@string/sort"
            android:src="@drawable/sort"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.skydoves.powerspinner.PowerSpinnerView
            android:id="@+id/sort_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:hint="@string/initial_sort"
            android:paddingVertical="5dp"
            android:paddingStart="32dp"
            android:spinnerMode="dropdown"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="14sp"
            android:fontFamily="@font/sf_pro_display_medium"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:spinner_arrow_drawable="@drawable/drop_down_icon"
            app:spinner_arrow_gravity="end"
            app:spinner_arrow_tint="@color/black"
            app:spinner_item_array="@array/sort_by"
            app:spinner_popup_background="@color/white"
            app:spinner_popup_elevation="10dp"
            app:spinner_popup_end_padding="5dp"
            app:spinner_popup_start_padding="5dp"
            app:spinner_selected_item_background="@color/light_gray" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/sort_spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/sort_spinner">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/filters"
                android:scaleType="fitCenter"
                android:paddingVertical="5dp"
                android:paddingHorizontal="4dp"
                android:contentDescription="@string/filters"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filters"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="14sp"
                android:fontFamily="@font/sf_pro_display_medium"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tag_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="17dp"
            android:orientation="horizontal"
            android:clipToPadding="false"
            android:paddingEnd="16dp"
            android:paddingStart="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sort_spinner" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/catalog_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:clipToPadding="false"
            android:paddingBottom="16dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tag_list"
            app:spanCount="2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>