<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="14dp"
                    android:fontFamily="@font/sf_pro_display_medium"
                    android:text="@string/profile_app_label"
                    android:textColor="@color/black"
                    android:textIsSelectable="false"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    app:cardBackgroundColor="@color/light_gray"
                    app:cardElevation="0dp"
                    app:cardCornerRadius="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginBottom="13dp"
                            android:contentDescription="@string/profile_item_title"
                            android:src="@drawable/profile" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/user_name_view"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="7dp"
                                android:fontFamily="@font/sf_pro_display_medium"
                                android:textColor="@color/black"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/user_phone_view"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="6dp"
                                android:layout_marginBottom="8dp"
                                android:fontFamily="@font/sf_pro_display_medium"
                                android:textColor="@color/grey"
                                android:textSize="10sp" />
                        </LinearLayout>
                    </LinearLayout>

                    <ImageButton
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="9dp"
                        android:layout_marginEnd="8dp"
                        android:layout_gravity="center_vertical|end"
                        android:background="@android:color/transparent"
                        android:src="@drawable/sign_out"
                        android:scaleType="fitXY"
                        android:contentDescription="@string/sign_out" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    app:cardBackgroundColor="@color/light_gray"
                    app:cardElevation="0dp"
                    app:cardCornerRadius="8dp">

                    <LinearLayout
                        android:id="@+id/favourites_layout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginBottom="13dp"
                            android:src="@drawable/heart"
                            android:contentDescription="@string/profile_item_title"
                            app:tint="@color/pink" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="7dp"
                                android:text="@string/favourites"
                                android:textSize="14sp"
                                android:textColor="@color/black"
                                android:fontFamily="@font/sf_pro_display_medium"/>

                            <TextView
                                android:id="@+id/favourites_number_view"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="6dp"
                                android:layout_marginBottom="8dp"
                                android:textSize="10sp"
                                android:textColor="@color/grey"
                                android:fontFamily="@font/sf_pro_display_medium"
                                android:textIsSelectable="false"/>
                        </LinearLayout>
                    </LinearLayout>

                    <ImageButton
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="9dp"
                        android:layout_marginEnd="8dp"
                        android:layout_gravity="center_vertical|end"
                        android:background="@android:color/transparent"
                        android:src="@drawable/arrow_right"
                        android:scaleType="fitXY"
                        android:contentDescription="@string/sign_out" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="@color/light_gray"
                    app:cardBackgroundColor="@color/light_gray"
                    app:cardElevation="0dp"
                    app:cardCornerRadius="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginBottom="13dp"
                            android:src="@drawable/shops"
                            android:contentDescription="@string/shops" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_gravity="center_vertical"
                            android:text="@string/shops"
                            android:textSize="14sp"
                            android:textColor="@color/black"
                            android:fontFamily="@font/sf_pro_display_medium"/>
                    </LinearLayout>

                    <ImageButton
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="9dp"
                        android:layout_marginEnd="8dp"
                        android:layout_gravity="center_vertical|end"
                        android:background="@android:color/transparent"
                        android:src="@drawable/arrow_right"
                        android:scaleType="fitXY"
                        android:contentDescription="@string/shops" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    app:cardBackgroundColor="@color/light_gray"
                    app:cardElevation="0dp"
                    app:cardCornerRadius="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginBottom="13dp"
                            android:src="@drawable/feedback"
                            android:contentDescription="@string/feedback" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_gravity="center_vertical"
                            android:text="@string/feedback"
                            android:textSize="14sp"
                            android:textColor="@color/black"
                            android:fontFamily="@font/sf_pro_display_medium"/>
                    </LinearLayout>

                    <ImageButton
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="9dp"
                        android:layout_marginEnd="8dp"
                        android:layout_gravity="center_vertical|end"
                        android:background="@android:color/transparent"
                        android:src="@drawable/arrow_right"
                        android:scaleType="fitXY"
                        android:contentDescription="@string/feedback" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="@color/light_gray"
                    app:cardBackgroundColor="@color/light_gray"
                    app:cardElevation="0dp"
                    app:cardCornerRadius="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginBottom="13dp"
                            android:src="@drawable/offer"
                            android:contentDescription="@string/offer" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_gravity="center_vertical"
                            android:text="@string/offer"
                            android:textSize="14sp"
                            android:textColor="@color/black"
                            android:fontFamily="@font/sf_pro_display_medium"/>
                    </LinearLayout>

                    <ImageButton
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="9dp"
                        android:layout_marginEnd="8dp"
                        android:layout_gravity="center_vertical|end"
                        android:background="@android:color/transparent"
                        android:src="@drawable/arrow_right"
                        android:scaleType="fitXY"
                        android:contentDescription="@string/offer" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    app:cardBackgroundColor="@color/light_gray"
                    app:cardElevation="0dp"
                    app:cardCornerRadius="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginBottom="13dp"
                            android:src="@drawable/refund"
                            android:contentDescription="@string/refund" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_gravity="center_vertical"
                            android:text="@string/refund"
                            android:textSize="14sp"
                            android:textColor="@color/black"
                            android:fontFamily="@font/sf_pro_display_medium"/>
                    </LinearLayout>

                    <ImageButton
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="9dp"
                        android:layout_marginEnd="8dp"
                        android:layout_gravity="center_vertical|end"
                        android:background="@android:color/transparent"
                        android:src="@drawable/arrow_right"
                        android:scaleType="fitXY"
                        android:contentDescription="@string/refund" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_out_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_alignParentBottom="true"
                android:paddingTop="18dp"
                android:paddingBottom="15dp"
                android:text="@string/sign_out"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:fontFamily="@font/sf_pro_display_medium"
                android:stateListAnimator="@null"
                android:textAllCaps="false"
                app:backgroundTint="@color/light_gray"
                app:cornerRadius="8dp"
                app:elevation="0dp" />
        </RelativeLayout>
    </ScrollView>
</layout>